fix(app.css): adjust body overflow properties for improved scrolling behavior

--- a/apps/mini/app/(app)/app.css
+++ b/apps/mini/app/(app)/app.css
@@ -54,21 +54,20 @@
   }
 }
 
-html,
+/* html,
 body {
   overflow: hidden !important;
   overscroll-behavior: none !important;
-}
+} */
 
 body {
   height: 100vh !important;
+  overflow: auto;
   min-height: 100vh;
 
   & > div:first-child {
-    height: 100vh !important;
     min-height: 100vh;
     overflow: hidden !important;
-    overscroll-behavior: none !important;
   }
 }
 
